# fixpp

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  message_type.h
fixpp_tests/: ReadMe.txt  fixpp_tests.cpp  fixpp_tests.vcxproj  fixpp_tests.vcxproj.filters  stdafx.cpp
googletest-release-1.8.0/googletest/msvc/: gtest.vcxproj
include/fixpp/: dsl.h  message.h  message_type.h  meta.h  streambuf.h  tag.h  view.h  visitor.h  writer.h
include/fixpp/compiler/: warning.h
include/fixpp/dsl/: component_block.h  extensions.h  field.h  message.h  repeating_group.h  required.h
include/fixpp/dsl/details/: .unwrap.h.swp  chars.h  flatten.h  lexical_cast.h  traits.h  unwrap.h
include/fixpp/meta/: detect.h  list.h  map.h  pack.h  seq.h  tuple.h
include/fixpp/utils/: SmallVector.h  cursor.h  result.h  soh.h  time.h
include/fixpp/versions/: base.h  traits.h  v42.h  v43.h  v44.h  v50sp2.h
include/fixpp/versions/v42/: dict.h  messages.h  version.h
include/fixpp/versions/v42/messages/: application.h  session.h
include/fixpp/versions/v43/: component_blocks.h  dict.h  messages.h  spec.h  version.h
include/fixpp/versions/v43/messages/: application.h  session.h
include/fixpp/versions/v44/: component_blocks.h  dict.h  messages.h  spec.h  version.h
include/fixpp/versions/v44/messages/: application.h  session.h
include/fixpp/versions/v50sp2/: component_blocks.h  dict.h  messages.h  version.h
include/fixpp/versions/v50sp2/messages/: application.h  session.h
msvc/: bench_test.vcxproj  bench_test.vcxproj.filters  fixpp.props  fixpp.sln  fixpp.vcxproj  fixpp.vcxproj.filters  fixpp_tests.filters  fixpp_tests.vcxproj  main.cc  message_test.vcxproj  message_test.vcxproj.filters  visitor_test.vcxproj  visitor_test.vcxproj.filters  writer_test.vcxproj  writer_test.vcxproj.filters
src/: CMakeLists.txt  cursor.cpp
tests/: CMakeLists.txt  bench_test.cc  message_test.cc  misc_bench.cc  serialize_bench.cc  visit_bench.cc  visitor_test.cc  writer_test.cc
xml/: fixpp.py
